--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.12.0",
+    "@emotion/styled": "^11.12.0",
+    "@mui/base": "^5.0.0-beta.40",
+    "@mui/material": "^5.16.4",
     "@mui/x-tree-view": "^7.9.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +18,7 @@
     "flume": "^1.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-number-format": "^5.4.0",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.3",
     "typescript": "^4.9.5",
