--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "flume": "^1.0.4",
+    "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-drag-listview": "^2.0.0",
     "react-number-format": "^5.4.0",
     "react-scripts": "5.0.1",
     "reactflow": "^11.11.3",
