--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.12.0",
     "@emotion/styled": "^11.12.0",
     "@mui/base": "^5.0.0-beta.40",
+    "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.4",
     "@mui/x-tree-view": "^7.9.0",
     "@testing-library/jest-dom": "^5.17.0",
